GearsetPOC/force-app/main/default/objects/B2b_PCC__c/B2b_PCC__c.object-meta.xml
<CustomObject>
    <description>Custom object migrated from Thango as part of Eurostar Delta migration project. Eurostar Jira ref DEIS-222</description>
    <label>PCC</label>
    <nameField>
        <label>PCC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PCC&#39;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>