GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_AgenciesNetwork__c.field-meta.xml
<CustomField>
    <fullName>B2b_AgenciesNetwork__c</fullName>
    <label>Agencies Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>BCD Travel</fullName>
            </value>
            <value>
                <fullName>CWT</fullName>
            </value>
            <value>
                <fullName>DER</fullName>
            </value>
            <value>
                <fullName>DERPART</fullName>
            </value>
            <value>
                <fullName>Distributor Portal</fullName>
            </value>
            <value>
                <fullName>Egencia</fullName>
            </value>
            <value>
                <fullName>FCM Travel</fullName>
            </value>
            <value>
                <fullName>HRG</fullName>
            </value>
            <value>
                <fullName>Lufthansa City Center</fullName>
            </value>
            <value>
                <fullName>Omnia Travel</fullName>
            </value>
            <value>
                <fullName>Other Small Agencies</fullName>
            </value>
            <value>
                <fullName>Schiphol Travel</fullName>
            </value>
            <value>
                <fullName>Selectour Afat</fullName>
            </value>
            <value>
                <fullName>Tourcom</fullName>
            </value>
            <value>
                <fullName>TUI</fullName>
            </value>
            <value>
                <fullName>Uniglobe</fullName>
            </value>
            <value>
                <fullName>VCK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>