GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_Country__c.field-meta.xml
<CustomField>
    <fullName>B2b_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>