GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_EudoNetExternalId__c.field-meta.xml
<CustomField>
    <fullName>B2b_EudoNetExternalId__c</fullName>
    <externalId>true</externalId>
    <label>B2b_EudoNetExternalId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>