GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_IATACode__c.field-meta.xml
<CustomField>
    <fullName>B2b_IATACode__c</fullName>
    <label>IATA Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>