GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_Number__c.field-meta.xml
<CustomField>
    <fullName>B2b_Number__c</fullName>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>