GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_OfficeIdCode__c.field-meta.xml
<CustomField>
    <fullName>B2b_OfficeIdCode__c</fullName>
    <label>PCC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>