GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_Street__c.field-meta.xml
<CustomField>
    <fullName>B2b_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>