GearsetPOC/force-app/main/default/objects/B2b_PCC__c/fields/B2b_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>B2b_ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>