GearsetPOC/force-app/main/default/objects/B2b_PCC__c/validationRules/B2b_BlockNameAndIATACode.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_BlockNameAndIATACode</fullName>
    <active>true</active>
    <description>Once the IATA Code and Name are filled they can&#39;t be modified</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
!ISNEW(),
OR(
ISCHANGED(B2b_IATACode__c),
ISCHANGED(Name)
)
)</errorConditionFormula>
    <errorMessage>Once the IATA Code and Name are filled they can&#39;t be modified</errorMessage>
</ValidationRule>